java.sourceCompatibility = JavaVersion.VERSION_21 with preview